Spacing corrections

--- a/src/components/ComingSoon/ComingSoon.sass
+++ b/src/components/ComingSoon/ComingSoon.sass
@@ -4,7 +4,7 @@
   display: flex
   flex-direction: row
   justify-content: space-between
-  margin-top: 120px !important
+  margin-top: 60px !important
 
 .comingsoon-text-container
   display: flex
