--- a/src/components/PromoLooper/PromoLooper.sass
+++ b/src/components/PromoLooper/PromoLooper.sass
@@ -2,7 +2,7 @@
 .prosection-container
   display: flex
   align-items: center
-  margin-top: 120px !important
+  margin-top: 60px !important
 
 .prosection-header
   width: 50%
