--- a/src/components/PromoSteps/PromoSteps.sass
+++ b/src/components/PromoSteps/PromoSteps.sass
@@ -4,6 +4,7 @@
   display: flex
   flex-direction: column
   justify-content: center
+  margin-top: 20px !important
 
 .everything-header
   margin-bottom: 60px
